# KiroCortex

./: .gitignore  Cargo.toml  Makefile  README.md  README_VN.md
.github/: secret_scanning.yml
.github/workflows/: release.yml
.kiro/: cortex-memory.db
.kiro/steering/: builtin-rules.md  cli-contract.md  config-schema.md  data-model.md  hitl-contract.md  hook-io-contract.md  init-idempotency.md  mcp-proxy-contract.md  memory-contract.md  path-extraction.md  product.md  security-policy.md
benchmarks/: BENCHMARK_RESULTS.md  all.sh  beir_benchmark.py  bench_utils.py  bipia_benchmark.py  compare.py  embedding_benchmark.py  latest-bipia-benchmark.json  latest-embedding-benchmark.json  latest-locomo-benchmark.json  latest-longmemeval-benchmark.json  latest-memory-benchmark.json  latest-public-benchmark.json  locomo_benchmark.py  longmemeval_benchmark.py  memory_benchmark.py  public_benchmark.py  run.sh  summary.py
benchmarks/.cache/: wa_comment_issue.jsonl  wa_email_msg.jsonl  wa_popup.jsonl  wa_wasp.jsonl
benchmarks/data/: memory_corpus.json  memory_queries.json  semantic_memory_corpus.json  semantic_memory_queries.json
docs/: IMPLEMENTATION_PLAN.md  TDD_PLAN.md  how-it-works.md
src/: audit.rs  cli.rs  config.rs  embedding.rs  handlers.rs  hitl.rs  hook_event.rs  init.rs  injection_scanner.rs  main.rs  memory.rs  path_matcher.rs  proxy.rs  result.rs  secret_scanner.rs  tune.rs
tests/: test_cli.rs
