[package]
name = "kiro-cortex"
version = "0.1.0"
edition = "2021"
description = "Kiro Cortex — Guard + Proxy + Memory for AI Agents"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.11"
unicode-normalization = "0.1"
base64 = "0.22"
glob = "0.3"
dirs = "6.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
sha2 = "0.10"
which = "7.0"
rusqlite = { version = "0.32", features = ["bundled"] }

# Optional: embedding support for semantic memory search
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.21", optional = true }

[features]
default = []
embedding = ["ort", "tokenizers"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
